      get turned off) if any notes are playing at the time [Mike Caron]
    * Browsing for a replacement song, and canelling deleted the existing song.
      [Mike Caron]
    * Rewards in battle are rewarded multiple times. [Mike Caron]
    * Linux: specifying a file on the command line now works even if the file
      is in a different directory.

  * New Plotscripting Commands

  * Stuff only Developers Will Notice

Feb 16 2006 [serendipity+]

  * Emergency update to fix bug 138 (out-of-control file growth when
    creating a new RPG file) [Simon Bradley, James Paige]
  * Emergency fix to a bug which deletes all song names when 99th song 
    slot was in use [Ralph Versteegen]
  * Fixed a bug in battle background animation [Mike Caron]
  * Fixed a hidden bug in running unumped RPGs [Mike Caron]
  * Fixed OoB spells [Mike Caron]
  * Fixed broken item-rewards display in battles

Feb 15 2006 [serendipity]

  * New Features

    * !!! Native Windows port of GAME.EXE [Simon Bradley] !!!

    * !!! Native Windows port of CUSTOM.EXE [Simon Bradley] !!!

    * You can copy and paste different sized sprites across the sprite
      editors, and while you are drawing a sprite you now paste and
      transparent-paste at the current cursor position instead of
      top left corner [Ralph Versteegen]

    * Attack bitsets to disable certain target slots on an
      attack-by-attack basis. [James Paige]
      (Unfinished! Only works for heroes right now, see bug 102)

    * Animated backdrops in battle [Mike Caron]

    * Attack bitset to force the heroes to run away [James Paige]

    * General bitset to "Disable Hero's Battle Cursor" [Yuriy]

    * Attack option to set a tag (with a number of options relating
      to what triggers the tag, and conditional to another tag)
      [Mike Caron]

    * Added damage cap option (in General Game Data) [Mike Caron]

    * Spell Descriptions! (set in Attacks->Appearance) [Mike Caron]
